fix unescaped entities with '

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["next", "./node_modules/gts/"]
+  "extends": ["next", "./node_modules/gts/"],
+  "rules": {"react/no-unescaped-entities": 0}
 }
