--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,16 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# npm
+package-lock.json
+
+
+# Yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
