--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "gts lint",
-    "clean": "gts clean",
+    "lint": "next lint",
     "compile": "tsc",
-    "fix": "gts fix",
     "prepare": "yarn run compile",
     "pretest": "yarn run compile",
     "posttest": "yarn run lint"
@@ -35,9 +33,8 @@
     "eslint-config-next": "^12.1.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "gts": "^3.1.0",
     "prettier": "^2.6.2",
-    "prettier-eslint": "^14.0.2",
+    "prettier-eslint": "^15.0.1",
     "typescript": "^4.6.4"
   }
 }
