--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,10 @@
 {
-  "extends": ["next"],
-  "rules": {"react/no-unescaped-entities": 0}
+	"extends": [
+		"plugin:react/recommended", // Uses the recommended rules from @eslint-plugin-react
+		"plugin:@typescript-eslint/recommended", // Uses the recommended rules from @typescript-eslint/eslint-plugin
+		"plugin:react/jsx-runtime",
+		"next"
+	],
+
+	"rules": { "react/no-unescaped-entities": 0, "react/jsx-uses-react": "off" }
 }
