--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "eslint-config-next": "^12.1.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.1",
     "prettier": "^2.6.2",
     "prettier-eslint": "^15.0.1",
-    "typescript": "^4.6.4"
+    "typescript": "latest"
   }
 }
